# tee-io-validator

./: .gitignore  .gitmodules  LICENSE.md  README.md
.github/workflows/: codeql.yml  main.yml
doc/: cxl_ide_key_refresh.md  faq.md  ide_test.ini  ide_test_ini.md  key_byte_order.md  run_traffic.md  teeio_validator_build.md  teeio_validator_usage.md
doc/CxlIdeKm/CxlIdeKmTestCase/: 4.CxlKSetStop.md
doc/CxlIdeKm/CxlIdeKmTestConfiguration/: 1.CxlIDE.md
doc/CxlIdeKm/CxlIdeKmTestTopology/: 1.CxlIDE.md
doc/IdeKmTestCase/: 4.KSetStop.md  5.SpdmSession.md
doc/IdeKmTestConfiguration/: 1.SelectiveIDE.md  3.SelectiveAndLinkIDE.md
doc/IdeKmTestTopology/: 3.SelectiveAndLinkIDE.md
doc/cxl_ide_test/CxlIdeKmTestCase/: 1.CxlQuery.md  2.CxlKeyProg.md  3.CxlKSetGo.md  5.CxlGetKey.md
doc/cxl_ide_test/CxlIdeKmTestConfiguration/: 1.CxlIDE.md
doc/ide_test/IdeKmTestCase/: 1.Query.md  2.KeyProg.md  3.KSetGo.md
doc/ide_test/IdeKmTestConfiguration/: 2.LinkIDE.md
doc/ide_test/IdeKmTestTopology/: 1.SelectiveIDE.md  2.LinkIDE.md
doc/sample_ini/: cxl_ide.ini  pcie_ide.ini  spdm_test.ini  tdisp_test.ini
doc/spdm_test/: spdm_test.md
doc/tdisp_test/TdispTestCase/: 1.TdispVersion.md  2.TdispCapabilities.md  3.LockInterfaceResponse.md  4.DeviceInterfaceReport.md  5.DeviceInterfaceState.md  6.StartInterfaceResponse.md  7.StopInterfaceResponse.md
doc/tsp_test/TspTestCase/: 1.GetTargetTspVersionResponse.md  2.GetTargetTspCapabilitiesResponse.md  3.SetTargetTspConfigurationResponse.md  4.GetTargetTspConfigurationResponse.md  5.GetTargetTspConfigurationReportResponse.md  6.LockTargetTspConfigurationResponse.md
teeio-validator/: CMakeLists.txt
teeio-validator/include/: cxl.h  cxl_ide.h  cxl_ide_lib.h  cxl_ide_test_lib.h  cxl_tsp.h  cxl_tsp_test_lib.h  helperlib.h  ide_test.h  ide_test_case.h  ide_test_config.h  ide_test_group.h  ide_test_ini.h  ide_tools.h  intel_keyp.h  pcie.h  pcie_ide.h  pcie_ide_lib.h  pcie_ide_test_lib.h  spdm_lib_config.h  spdm_test.h  spdm_test_lib.h  tdisp_test_lib.h  teeio_debug.h  teeio_spdmlib.h  teeio_validator.h  utils.h
teeio-validator/teeio_validator/: CMakeLists.txt  cmdline.c  device_pci.c  doe_read_write.c  ide_test.c  ide_test_ini.c  pci_ide.c  rp_pci.c  scan_pci.c  teeio_debug.c  teeio_validator.c  teeio_validator_collection.c  teeio_validator_measurement.c  teeio_validator_pci_doe.c  teeio_validator_spdm.c  test_factory.c  utils.c
teeio-validator/teeio_validator/include/: teeio_validator_internal.h  test_factory.h
teeio-validator/teeio_validator/test_case/: ide_km_common.c  test_case_full.c  test_case_full_keyrefresh.c  test_case_keyprog_1.c  test_case_keyprog_2.c  test_case_keyprog_3.c  test_case_keyprog_4.c  test_case_keyprog_5.c  test_case_keyprog_6.c  test_case_ksetgo_1.c  test_case_ksetgo_2.c  test_case_ksetgo_3.c  test_case_ksetgo_4.c  test_case_ksetstop_1.c  test_case_ksetstop_2.c  test_case_ksetstop_3.c  test_case_ksetstop_4.c  test_case_query.c
teeio-validator/teeio_validator/test_config/: test_config_cfg_sel_ide.c  test_config_common.c  test_config_default.c  test_config_pcrc.c  test_config_sel_ide_for_cfg_req.c
teeio-validator/teeio_validator/test_group/: test_group.c
teeio-validator/teeio_validator/tools/: ide_common.c  lside.c  setide.c
teeio-validator/tools/: CMakeLists.txt  ide_common.c  lside.c  setide.c
